--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,9 @@
         }
     ],
     "require": {
-        "php" : "^7.1",
-        "illuminate/database": "~5.6",
-        "illuminate/support": "~5.6"
+        "php" : "^7.2",
+        "illuminate/database": "^6.0",
+        "illuminate/support": "^6.0"
     },
     "require-dev": {
         "mockery/mockery": "^0.9.4",
